# handson_nanobind

./: CMakeLists.txt  pyproject.toml
.github/workflows/: pip_linux.yml  pip_osx.yml  pip_windows.yml  wheels_OSx.yml  wheels_linux.yml  wheels_windows.yml
src/: nanobind_example_ext.cpp
src/nanobind_example/: __init__.py
tests/: test_cpath.py
